# MyWork-in-public

Library Website/Admin/: Nav&FooterStyle.css  Navforadmin.html
Library Website/Admin/Admin Dashboard Final/: Add_new_book.html  Admin_dashboard.html  Edit.html  Nav&FooterStyle.css  Navjavas.js  displaybooks.html  veiw_edit_books.html
Library Website/User(1)/: Nav&FooterStyle.css  navforuser.html
Library Website/User(1)/BOOK version 5000/: Ar-Raheeq Al-Makhtum.html  Book listing for admin with css (1).html  Nav&FooterStyle.css  Navjavas.js  Object-Oriented Software Engineering.html  The Hundred Years' War on Palestine.html  books_styles (1).css
Library Website/User(1)/UserDashboard version 500/: Ar-Raheeq Al-Makhtum.html  Atomic Habits.html  Nav&FooterStyle.css  Object-Oriented Software Engineering.html  The Hundred Years' War on Palestine.html  Thinking, Fast and Slow.html  When Breath Becomes Air (2).html  books_styles.css  list.html  userDash.css  userDash.js
Library Website/forall/: About.html  Ar-Raheeq Al-Makhtum.html  Atomic Habits.html  Book listing for admin with css (1).html  Home.html  Nav&FooterStyle.css  Startindex.html  Thinking, Fast and Slow.html  When Breath Becomes Air (2).html  file.css  forall copy.html  home.css  login.html
data_structure_mohemd_dsoki/: data_structure.sln
data_structure_mohemd_dsoki/data_structure/: Source.cpp  data_structure.vcxproj
pyramid_XO/: AI_Player.cpp  BoardGame_Classes.hpp  CMakeLists.txt  GameManager.cpp  Player.cpp  RandomPlayer.cpp  X_O_App.cpp  X_O_Board.cpp  pyramid_X_O_Board.cpp
(+51 files in other folders)
